# kedro-gem

./: README.md  requirements.txt
dummy/: README.md  data.csv  pyproject.toml  requirements.txt  session_store.db
dummy/.viz/: stats.json
dummy/conf/base/: catalog.yml
dummy/docs/source/: conf.py  index.rst
dummy/multi-team-test/: README.md  pyproject.toml  session_store.db
dummy/multi-team-test/.viz/: stats.json
dummy/multi-team-test/conf/base/: parameters.yml
dummy/multi-team-test/data/01_raw/: input_data.csv
dummy/multi-team-test/src/multi_team_test/: __init__.py  __main__.py
dummy/multi-team-test/src/multi_team_test/pipelines/data_processing/: nodes.py  pipeline.py
dummy/output/: category_counts.csv  data.csv
dummy/src/dummy/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
dummy/src/dummy/pipelines/data_processing/: nodes.py  pipeline.py
dummy/src/dummy/pipelines/test_folder_struct/: nodes.py  pipeline.py
dummy/tests/: test_run.py
dummy/tests/pipelines/data_science/: test_pipeline.py
projects/spacex/: README.md  pyproject.toml
projects/spacex/src/spacex/: __init__.py  __main__.py
spacex/: README.md  pyproject.toml  requirements.txt  session_store.db
spacex/conf/base/: catalog.yml  parameters.yml
spacex/data/01_raw/: spacex_launches.csv
spacex/src/spacex/: __init__.py  __main__.py
spacex/src/spacex/pipelines/spaceX_pipelines/: nodes.py  pipeline.py
