[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "spacex"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
spacex = "spacex.__main__:main"

[tool.kedro]
package_name = "spacex"
project_name = "spaceX"
kedro_init_version = "0.19.8"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "spacex.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "176721719745478ba3a7d51fd1d71daa"
